[package]
name = "test_utils"
version = "0.1.0"
description = "A test utility module to simplify the dataset generation."
authors = [ "Gang Liao <gangliao@cs.umd.edu>" ]
license = "Apache-2.0"
keywords = [ "testing", "utility", "fake", "dataset" ]
edition = "2018"

[dependencies]
arrow = { git = "https://github.com/DSLAM-UMD/arrow", branch = "scq", features = [ "simd" ] }
base64 = "0.13.0"
chrono = { version = "0.4.19", features = [ "serde" ] }
daggy = "0.7.0"

datafusion = { git = "https://github.com/DSLAM-UMD/arrow", branch = "scq", features = [ "simd" ] }
driver = { path = "../driver" }
fake = { version = "2.4", features = [ 'derive', 'chrono' ] }
rand = "0.8"
runtime = { path = "../runtime" }
serde = { version = "1.0", features = [ "derive" ] }
serde_bytes = "0.11"
serde_json = "1.0"

[dev-dependencies]
aws_lambda_events = "0.4"
tokio = { version = "1.2", features = [ "macros", "io-util", "sync", "rt-multi-thread" ] }

[lib]
name = "test_utils"
path = "src/lib.rs"
crate-type = [ "lib" ]
