[package]
name = "test_utils"
version = "0.1.0"
description = "A test utility module to simplify the dataset generation."
authors = [ "Gang Liao <gangliao@cs.umd.edu>" ]
license = "Apache-2.0"
keywords = [ "testing", "utility", "fake", "dataset" ]
edition = "2018"

[dependencies]
arrow = { git = "https://github.com/DSLAM-UMD/arrow-rs", branch = "squirtle", features = [ "simd" ] }
base64 = "0.13.0"
chrono = { version = "0.4.19", features = [ "serde" ] }
daggy = "0.7.0"
datafusion = { git = "https://github.com/DSLAM-UMD/arrow-datafusion", branch = "squirtle" }
driver = { path = "../driver" }
fake = { version = "2.4", features = [ 'derive', 'chrono' ] }
lambda_runtime = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", branch = "master" }

rand = "0.8.3"
runtime = { path = "../runtime" }
serde = { version = "1.0", features = [ "derive" ] }
serde_bytes = "0.11"
serde_json = "1.0"
tokio = { version = "1.2", features = [ "macros", "io-util", "sync", "rt-multi-thread" ] }

[dev-dependencies]
aws_lambda_events = "0.4"
rusoto_core = "0.46.0"

rusoto_lambda = "0.46.0"

[lib]
name = "test_utils"
path = "src/lib.rs"
crate-type = [ "lib" ]

[[bin]]
name = "test_nextmark"
path = "src/nextmark.rs"
