[package]
name = "test_utils"
version = "0.2.0"
description = "A test utility module to simplify the dataset generation."
authors = [ "Gang Liao <gangliao@cs.umd.edu>" ]
license = "Apache-2.0"
keywords = [ "testing", "utility", "fake", "dataset" ]
edition = "2021"

[dependencies]
arrow = { git = "https://github.com/flock-lab/arrow-rs", branch = "flock", features = [ "simd" ] }
base64 = "0.13.0"
chrono = { version = "0.4.19", features = [ "serde" ] }
daggy = { git = "https://github.com/flock-lab/daggy", branch = "master" }
datafusion = { git = "https://github.com/flock-lab/arrow-datafusion", branch = "flock" }
driver = { path = "../driver" }
fake = { version = "2.4", features = [ 'derive', 'chrono' ] }
lambda_runtime = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", branch = "master" }

rand = "0.8.3"
runtime = { path = "../runtime" }
serde = { version = "1.0", features = [ "derive" ] }
serde_bytes = "0.11"
serde_json = "1.0"
tokio = { version = "1.4", features = [ "macros", "io-util", "sync", "rt-multi-thread" ] }

[dev-dependencies]
aws_lambda_events = "0.5"
rusoto_core = "0.47.0"

rusoto_lambda = "0.47.0"

[lib]
name = "test_utils"
path = "src/lib.rs"
crate-type = [ "lib" ]

[[bin]]
name = "test_nexmark"
path = "src/nexmark.rs"
