[package]
name = "logical_plan"
version = "0.1.0"
authors = ["Gang Liao <gangliao@cs.umd.edu>"]
license = "Apache-2.0"
edition = "2018"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlparser = "0.7.0"
arrow = { git = "https://github.com/DSLAM-UMD/arrow-rs", branch = "squirtle", features = [ "simd" ] }
common = {path = "../common"}
